samples/_failures_safe/1761083748_a9def4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5baeef8a.c: In function ‘main’:
./samples/SAFE/__tmp_5baeef8a.c:180: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_5baeef8a.c:179:9: error: expected declaration or statement at end of input
  179 |         } else if
      |         ^
./samples/SAFE/__tmp_5baeef8a.c:179:9: error: expected declaration or statement at end of input
